force-app/objects/Maintenance__c.object
<CustomObject>
    <description>Représente une réparation de bateau</description>
    <fields>
        <fullName>Boat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Boat related to the maintenance</description>
        <label>Boat</label>
        <referenceTo>Boat__c</referenceTo>
        <relationshipLabel>Maintenances</relationshipLabel>
        <relationshipName>Maintenances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Content of the maintenance</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date de fin de la maintenance</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Daet de debut de la maintenance</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <description>Etat de la maintenance</description>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Traité</fullName>
                </value>
                <value>
                    <fullName>Abandonné</fullName>
                </value>
                <value>
                    <fullName>Planifiée</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Maintenance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Maintenance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>